<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/gradient4"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/app_icon"
        app:srcCompat="@drawable/ic_fly_app" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/navy_blue"
        android:text="@string/nav_header_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/navy_blue"
        android:text="@string/nav_header_subtitle"
        android:textSize="16sp" />
</LinearLayout>