<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_page2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation">

    <RadioGroup
        android:id="@+id/rg_relationship"
        android:layout_width="400dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender"
        app:layout_constraintVertical_bias="0.052">

        <TextView
            android:id="@+id/tv_relationship"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/relationship_msg"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <RadioButton
            android:id="@+id/rb_relationship_single"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/relationship_single_msg" />

        <RadioButton
            android:id="@+id/rb_relationship_married"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/relationship_married_msg" />

        <RadioButton
            android:id="@+id/rb_relationship_in_relationship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/relationship_in_relationship_msg" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_sign_up_person_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/sign_up_person_info_msg"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:background="@color/input_bar_color"
        android:gravity="center"
        android:hint="@string/first_name_msg"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/et_first_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@color/input_bar_color"
        android:gravity="center"
        android:hint="@string/nickname_msg"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="383dp"
        android:layout_height="51dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname"
        app:layout_constraintVertical_bias="0.035">

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/gender_msg"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <RadioButton
            android:id="@+id/rb_gender_male"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/gender_male_msg" />

        <RadioButton
            android:id="@+id/rb_gender_female"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/gender_female_msg" />

        <RadioButton
            android:id="@+id/rb_gender_other"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/gender_other_msg" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_job"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/et_first_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/input_bar_color"
        android:gravity="center"
        android:hint="@string/job_msg"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_age"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/et_education"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/et_first_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/input_bar_color"
        android:gravity="center"
        android:hint="@string/education_msg"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_city"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/tv_age_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="00"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/sb_age"
        app:layout_constraintStart_toEndOf="@+id/sb_age"
        app:layout_constraintTop_toTopOf="@+id/sb_age"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/sb_age"
        android:layout_width="309dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_msg"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/sb_age"
        app:layout_constraintEnd_toEndOf="@+id/sb_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sb_age"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender"
        app:layout_constraintVertical_bias="0.773" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/et_first_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/input_bar_color"
        android:gravity="center"
        android:hint="@string/city_msg"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_job"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_below="@id/et_first_name"
        android:layout_marginEnd="10dp"
        android:background="@color/input_bar_color"
        android:gravity="center"
        android:hint="@string/last_name_msg"
        android:inputType="textPassword"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/et_first_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blueBtnColor"
        android:text="@string/next_msg"
        android:textColor="@color/white"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toEndOf="@+id/btn_go_back" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blueBtnColor"
        android:onClick="onGoBackClick"
        android:text="@string/back_msg"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

